--- a/views/band.erb
+++ b/views/band.erb
@@ -3,3 +3,34 @@
 <br>
 
 <p>Choose the venues <%= @band.name %> has played at: </p>
+
+<% if @venues.any?() %>
+  <form action="/bands/<%= @band.id %>" method="post">
+    <input type="hidden" name="_method" value="patch">
+    <% @venues.each() do |venue| %>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" name="venue_ids[]" value="<%= venue.id() %>"><%= venue.name() %>
+        </label>
+      </div>
+    <% end %>
+
+    <button type="submit">Add venues</button>
+  </form>
+<% end %>
+
+<% if @band.venues().any?() %>
+
+  <h3>Here are all the venues this band has played at:</h3>
+
+  <ul>
+    <% @band.venues().each() do |venue| %>
+      <li><%= venue.name() %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>They haven't played anywhere yet!
+<% end %>
+
+
+<a href="/">Return to Main Page</a>
