remove bootstrap and add styles.css page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mad Libs!</title>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <title>Concerts</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
   </head>
   <body>
-    <div class="container">
+<div class="container">
       <%= yield %>
-    </div>
+</div>
+
   </body>
 </html>
